--- a/app/radio/views/repeater/details.phtml
+++ b/app/radio/views/repeater/details.phtml
@@ -48,7 +48,7 @@ map.addOverlay(circle);
             <div class="body">
                 <ul>
 
-                    <li>位置: <?php echo $repeater->province?> <?php echo $repeater->city?></li>
+                    <li>位置: <?php echo $repeater->province?> <?php echo $repeater->city?> <?php echo $repeater->county?></li>
                     <li>频率: <?php echo $repeater->frequency?></li>
                     <li>差频: <?php echo $repeater->shift?></li>
                     <li>静噪: <?php echo $repeater->squelch?></li>
