完善台网功能

--- a/app/photography/views/collection/photo.phtml
+++ b/app/photography/views/collection/photo.phtml
@@ -128,26 +128,33 @@
   <div class=foot></div>
 </div>
 
-<div class="side-module">
-  <div class="head">
-    <h2>一些常用光源的色温为</h2>
-  </div>
-  <div class="body">
+    <div class="side-module">
+        <div class="head"><h2>拍摄地点</h2></div>
+        <div class="body">
 
-	<ul> 
-	  <li>标准烛光为1930K（开尔文温度单位）；</li> 
-	  <li>钨丝灯为2760-2900K；</li>				
-	  <li>荧光灯为3000K；</li>			
-	  <li>闪光灯为3800K；</li>			
-	  <li>中午阳光为5400K；</li>	
-	  <li>电子闪光灯为6000K；</li> 
-	  <li>蓝天为12000-18000K。</li> 
-	</ul> 
+            <div class="divider solid"></div>
+            <div class="foot-links">  </div>
+        </div>
+        <div class="foot"></div>
+    </div>
+    
+    <div class="side-module">
+        <div class="head"><h2>一些常用光源的色温为</h2></div>
+        <div class="body">
+            <ul> 
+              <li>标准烛光为1930K（开尔文温度单位）；</li> 
+              <li>钨丝灯为2760-2900K；</li>				
+              <li>荧光灯为3000K；</li>			
+              <li>闪光灯为3800K；</li>			
+              <li>中午阳光为5400K；</li>	
+              <li>电子闪光灯为6000K；</li> 
+              <li>蓝天为12000-18000K。</li> 
+            </ul> 
 
-    <div class="divider solid"></div>
-    <div class="foot-links">  </div>
-  </div>
-  <div class="foot"></div>
-</div>
+            <div class="divider solid"></div>
+            <div class="foot-links">  </div>
+        </div>
+        <div class="foot"></div>
+    </div>
 </div>
 </div>
