--- a/app/radio/views/layouts/profile.phtml
+++ b/app/radio/views/layouts/profile.phtml
@@ -18,6 +18,7 @@
                     <li><a href="/radio/beacon/mgmt/">信标台管理</a></li>
                     <li><a href="/radio/qsl">QSL卡片管理</a></li>
                     <li><a href="/radio/profile/equipment">火腿装备管理</a></li>
+                    <li><a href="/radio/profile/net">无线电台网</a></li>
                 </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
