--- a/app/radio/views/net/log.phtml
+++ b/app/radio/views/net/log.phtml
@@ -1,99 +1,61 @@
-{strip}
 <div class="side-module">
-	<div class="head"><h2>{#net#}</h2> - <span>{$net->datetime}</span></div>
+	<div class="head"><h2>{#net#} - <?php echo $net->datetime ?></h2></div>
 	<div class="body"> 
 
-<div><h1> {$net->frequency} Radio net</h1></div>
-<div>{$net->topic}, control by <a href="/{$locale}/radio/qrz/{$net->control}.html">{$net->control}</a></div>
+<div><?php echo $net->frequency?> Radio net, <?php echo $net->topic ?>, control by <a href="/radio/index/qrz/<?php echo $net->host?>"><?php echo $net->host?></a></div>
+<span></span>
 
 	</div>
 	<div class=foot></div>
 </div>
-{/strip}
 
-{literal}
-<script type="text/javascript">
-$(document).ready(function(){
-	if (GBrowserIsCompatible()) {
-		var map = new GMap2(document.getElementById("map_canvas"));
-		map.addControl(new GLargeMapControl());
-        map.addControl(new GScaleControl());
-        map.enableScrollWheelZoom();
-        map.addControl(new GMapTypeControl());
-        map.addControl(new GOverviewMapControl());
-
-		function createMarker(point, call, qth) {
-          if(!qth) qth='收集中...';
-          
-          var marker = new GMarker(point);
-          GEvent.addListener(marker, "click", function() {
-{/literal}          
-            marker.openInfoWindowHtml("<span>{#callsign#}: <a href=\"/{$locale}/radio/qrz/"+call+".html\"><strong style=\"color:#DE0000;\">" + call + "</strong></a>" +"<br />{#latitude#}: "+ point.lat() +"<br />{#longitude#}: "+ point.lng()+ "<br />QTH："+qth+"<br /></span>");
-{literal}            
-          });
-          return marker;
-        }
-{/literal}
-		//map.setCenter(new GLatLng{$net->coordinates}, 10);
-		var mylatlng = new GLatLng{$net->coordinates}
-		map.setCenter(mylatlng, 9);
-		
-		{foreach from=$checkin_coordinates item=log_cds}  
-    	var polyline = new GPolyline([
-    		mylatlng,	
-        	new GLatLng{$log_cds->coordinates}
-			], "#FF0000", 3);
-		map.addOverlay(polyline);
-		var latlng = new GLatLng{$log_cds->coordinates}; 
-		map.addOverlay(createMarker(latlng, "{$log_cds->callsign}", "{$log_cds->qth}"));
-		{/foreach}
-		//var opts = {ldelim} text : "{#net#}<br>{#frequency#}:{$net->frequency}<br>{#control#}:{$net->control}"{rdelim} ;
-        //var marker = new PopupMarker(mylatlng, opts);
-        //map.addOverlay(marker);
-        map.openInfoWindowHtml(map.getCenter(), "<h3>{#net#}</h3><br>{#frequency#}:{$net->frequency}, {#control#}:{$net->control}");
-{literal}        
-	}
-
-});	
-</script>
-{/literal}
 <div class="main-module">
-	<div class="head"><h2>{#cover#}</h2></div>
+	<div class="head"><h2>Map</h2></div>
 	<div class="body"> 
-		<div id="map_canvas" style="width: 650px; height: 400px"></div>
+		<div id="map" style="width: 100%; height: 400px"></div>
 	</div>
 	<div class=foot></div>
 </div>	
 
-{strip}
+<script type="text/javascript">
+var map = new BMap.Map("map");
+map.centerAndZoom("重庆",12);
+
+var pointA = new BMap.Point(106.486654,29.490295);  // 创建点坐标A--大渡口区
+var pointB = new BMap.Point(106.581515,29.615467);  // 创建点坐标B--江北区
+//alert('从大渡口区到江北区的距离是：'+map.getDistance(pointA,pointB)+' 米。');     //获取两点距离
+
+var polyline = new BMap.Polyline([pointA,pointB], {strokeColor:"blue", strokeWeight:2, strokeOpacity:0.5});  //定义折线
+map.addOverlay(polyline);   //添加折线到地图上
+</script>
+
 <div class="main-module">
 	<div class="head"><h2>{#net#} {#logging#}</h2></div>
 	<div class="body"> 
 
 <table>
 	<tr>
-		<td>{#number#}</td>
-		<td>{#time#}</td>
-		<td>{#callsign#}</td>
-		<td>{#rst#}</td>
+		<td>time</td>
+		<td>callsign</td>
+		<td>rst</td>
 		<td>QTH</td>
-		<td>{#device#}</td>
-		<td>{#power#}</td>
+		<td>device</td>
+		<td>power</td>
+        <td>message</td>
 	</tr>
-{foreach from=$checks item=check}
+<?php foreach($checkins as $checkin) {?>
 	<tr>
-		<td>{counter}</td>
-		<td>{$check->time|date_format:"%H:%M"}</td>
-		<td><a href="/{$locale}/radio/qrz/{$check->callsign|lower}.html">{$check->callsign}</a></td>
-		<td>{$check->rst}</td>
-		<td>{$check->qth}</td>
-		<td>{$check->device}</td>
-		<td>{$check->power}</td>
+		<td><?php echo $checkin->datetime ?></td>
+        <td><?php echo $checkin->callsign ?></td>
+        <td><?php echo $checkin->rst ?></td>
+        <td><?php echo $checkin->qth ?></td>
+        <td><?php echo $checkin->device ?></td>
+        <td><?php echo $checkin->watt ?></td>
+        <td><?php echo $checkin->message ?></td>
 	</tr>
-{/foreach}
+<?php }?>
 </table>
 
 	</div>
 	<div class=foot></div>
 </div>
-{/strip}
