信令备案功能

--- a/app/radio/views/layouts/profile.phtml
+++ b/app/radio/views/layouts/profile.phtml
@@ -7,23 +7,47 @@
     </div>
     <div class="sideWrap">
         <div class="side-module">
-            <div class="head"><h2>业余无线电台</h2></div>
+            <div class="head"><h2>业余无线电台资料管理</h2></div>
             <div class="body">
                 <ul>
                     <li><a href="/radio/profile/callsign">呼号管理</a></li>
+                    <li><a href="/radio/profile/signaling">信令ID管理</a></li>
                     <li><a href="/radio/profile/qth">设台资料管理</a></li>
                     <li><a href="/radio/profile/mail">QSL卡片邮寄地址管理</a></li>
-                    <li><a href="/radio/logging/mgmt/">电台日志管理</a></li>
-                    <li><a href="/radio/repeater/mgmt/">中继台管理</a></li>
-                    <li><a href="/radio/beacon/mgmt/">信标台管理</a></li>
                     <li><a href="/radio/qsl">QSL卡片管理</a></li>
                     <li><a href="/radio/profile/equipment">火腿装备管理</a></li>
+                </ul>
+                <div class="divider solid"></div>
+                <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
+            </div>
+            <div class="foot"></div>
+        </div>       
+        
+        <div class="side-module">
+            <div class="head"><h2>中继，信标，台网管理</h2></div>
+            <div class="body">
+                <ul>
+                    
+                    <li><a href="/radio/repeater/mgmt/">中继台管理</a></li>
+                    <li><a href="/radio/beacon/mgmt/">信标台管理</a></li>
                     <li><a href="/radio/profile/net">无线电台网</a></li>
                 </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
             </div>
             <div class="foot"></div>
-        </div>        
+        </div>    
+        
+        <div class="side-module">
+            <div class="head"><h2>业余无线电台日志管理</h2></div>
+            <div class="body">
+                <ul>
+                    <li><a href="/radio/logging/mgmt/">电台日志管理</a></li>
+                </ul>
+                <div class="divider solid"></div>
+                <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
+            </div>
+            <div class="foot"></div>
+        </div>            
     </div>
 </div>
