--- a/app/technology/views/index/index.phtml
+++ b/app/technology/views/index/index.phtml
@@ -1,6 +1,9 @@
 	<a href="http://netkiller-github-com.iteye.com/">ITEYE 博客</a> | 
 	<a href="http://my.oschina.net/neochen/">OSChina 博客</a> | 
 	<a href="http://rline.blog.51cto.com/">51CTO 博客</a>
+	
+<table><tr><td><iframe src="http://ghbtns.com/github-btn.html?user=netkiller&repo=netkiller.github.com&type=watch&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true"></iframe></td><td><iframe src="http://ghbtns.com/github-btn.html?user=netkiller&repo=netkiller.github.com&type=fork&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true"></iframe></td><td><iframe src="http://ghbtns.com/github-btn.html?user=netkiller&type=follow&count=true&size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true"></iframe></td></tr></table>
+	
     <div class="main-module">
 		<div class="head"><h2>免费电子书项目</h2></div>
 		<div class="body">
