--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -14,36 +14,7 @@
 	   	</div>
 		<div class="foot"></div>
 	</div>
-	<div class="main-module">
-		<div class="head"><h2>原创文档</h2></div>
-		<div class="body">
-		<div style="float:left;">
-			<ul>
-				<li><a href="/technology/linux/index.html">Netkiller Linux 手札</a></li>
-			  	<li><a href="/technology/developer/index.html">Netkiller Developer 手札</a></li>
-				<li><a href="/technology/security/index.html">Netkiller Security 手札</a></li>
-				<li><a href="/technology/docbook/index.html">Netkiller Document 手札</a></li>
-				<li><a href="/technology/database/index.html">Netkiller Database 手札</a></li>
-				<li><a href="/technology/ubuntu/index.html">Netkiller Ubuntu 手札</a></li>
-				<li><a href="/technology/centos/index.html">Netkiller CentOS 手札</a></li>
-				<li><a href="/technology/freebsd/index.html">Netkiller FreeBSD 手札</a></li>
-				
-			</ul>
-		</div>	
-		<div style="float:left;">	
-		<ul>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">Netkiller Architect 手札</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/architect/index.html">大型网站架设指南</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postgres/postgresql.html">PostgreSQL 实例参考</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/postfix/index.html">Postfix Solution</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/pureftpd/index.html">PureFTPD</a></li>
-			<li><a href="http://netkiller.users.sourceforge.net/archives/technology/proftpd/index.html">ProFTPD</a></li>
-			<li><a href="/technology/" class="score-812.5 endless-pages-found-next-link">More &gt;&gt;&gt;</a></li>		
-		</ul>
-		</div>
-	   	</div>
-		<div class="foot"></div>
-	</div>
+
 
 	<div class="main-module">
 		<div class="head"><h2>{#itinerary#}</h2></div>
@@ -104,7 +75,7 @@
 	<tbody><tr>
 	<td valign="top">	
 	<div class="main-module">
-		<div class="head"><h2>{$rss.digital.headline}</h2></div>
+		<div class="head"><h2>摄影</h2></div>
 		<div class="body">
 		<ol>
 		{foreach from=$rss.digital.items item=i}
@@ -117,7 +88,7 @@
 	</td>
 	<td valign="top">
 	<div class="main-module">
-		<div class="head"><h2>{$rss.car.headline}</h2></div>
+		<div class="head"><h2>户外运动</h2></div>
 		<div class="body">
 		<ol>
 		{foreach from=$rss.car.items item=i}
@@ -130,7 +101,7 @@
 	</td>
 	<td valign="top">
 	<div class="main-module">
-		<div class="head"><h2>{$rss.book.headline}</h2></div>
+		<div class="head"><h2>业余无线电</h2></div>
 		<div class="body">
 		<ol>
 		{foreach from=$rss.book.items item=i}
@@ -144,6 +115,11 @@
 	</td>
 	</tr>
 </tbody></table>
+    <?php echo $this->getContent() ?>
+    <hr>
+<?php 
+echo Phalcon\Tag::linkTo("signup", "Sign Up Here!");
+?>
 
 <table width="100%">
     <tbody><tr>
@@ -163,16 +139,7 @@
     </td>
     </tr>
 </tbody></table>
-*}
 
-
-
-    <?php echo $this->getContent() ?>
-    <hr>
-<?php 
-echo "<h1>Hello!</h1>";
-echo Phalcon\Tag::linkTo("signup", "Sign Up Here!");
-?>
 
 
 
