--- a/app/radio/views/layouts/profile.phtml
+++ b/app/radio/views/layouts/profile.phtml
@@ -42,12 +42,29 @@
             <div class="head"><h2>业余无线电台日志管理</h2></div>
             <div class="body">
                 <ul>
-                    <li><a href="/radio/logging/mgmt/">电台日志管理</a></li>
+                    <li><a href="/radio/profile/logging/">电台日志管理</a></li>
                 </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
             </div>
             <div class="foot"></div>
         </div>            
+        <?php if($callings) {?>
+        <div class="side-module">
+            <div class="head"><h2>业余无线电被叫清单</h2></div>
+            <div class="body">
+                <ul>
+            <?php foreach ($callings as $calling){?>
+                <li>
+                    <?php echo $calling->callsign;?> <a href="/radio/index/qrz/<?php echo $calling->callsign;?>">查看</a>
+                </li>
+            <?php }?>
+                </ul>
+                <div class="divider solid"></div>
+                <div class="foot-links"><a href="/radio/logging/">电台操作日志</a></div>
+            </div>
+            <div class="foot"></div>
+        </div>                
+        <?php }?>
     </div>
 </div>
