--- a/app/radio/views/net/index.phtml
+++ b/app/radio/views/net/index.phtml
@@ -8,13 +8,15 @@
 		<td><label for="frequency">frequency</label></td>
 		<td><label for="topic">topic</label></td>
         <td><label for="topic">host</label></td>
+        <td></td>
 	</tr>
 <?php foreach($nets as $net){ ?>
 	<tr>
-        <td><a href="/radio/net/log/<?php echo $net->_id ?>"><?php echo $net->datetime ?></a></td>
+        <td><?php echo $net->datetime ?></td>
 		<td><?php echo $net->frequency ?></td>
 		<td><?php echo $net->topic ?></td>
 		<td><a href="/radio/index/qrz/<?php echo $net->host ?>"><?php echo $net->host ?></a></td>
+        <td><a href="/radio/net/log/<?php echo $net->_id ?>">台网名单</a></td>
 	</tr>
 <?php }?>
 </table>
